--- a/admin-ui/src/main/resources/application.properties
+++ b/admin-ui/src/main/resources/application.properties
@@ -1,1 +1,15 @@
 
+server.port=8081
+
+spring.datasource.url=jdbc:mysql://192.168.1.70:3306/geek_flower_shop_db?createDatabaseIfNotExist=true&characterEncoding=UTF-8&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=123123
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
+spring.jpa.hibernate.ddl-auto=validate
+spring.liquibase.change-log=classpath:db.changelog/db.changelog-master.xml
+spring.liquibase.enabled=false
+
