--- a/user-ui/pom.xml
+++ b/user-ui/pom.xml
@@ -42,6 +42,12 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+
+		<dependency>
+			<groupId>spring2.ru.geekbrains.data</groupId>
+			<artifactId>data</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 
 	<build>
