--- a/user-ui/src/main/resources/application.properties
+++ b/user-ui/src/main/resources/application.properties
@@ -14,3 +14,9 @@ spring.jpa.hibernate.ddl-auto=validate
 spring.liquibase.change-log=classpath:db.changelog/db.changelog-master.xml
 spring.liquibase.enabled=false
 
+spring.redis.host=localhost
+spring.redis.password=
+spring.redis.port=6379
+
+spring.session.store-type=redis
+
