ПР5. Применен балансировщик нагрузки zuul.

--- a/admin-ui/src/main/resources/application.properties
+++ b/admin-ui/src/main/resources/application.properties
@@ -13,3 +13,6 @@ spring.jpa.hibernate.ddl-auto=validate
 spring.liquibase.change-log=classpath:db.changelog/db.changelog-master.xml
 spring.liquibase.enabled=false
 
+#настройка, чтобы балансировщик нагрузки не перекидывал корзину на другой порт
+server.forward-headers-strategy=framework
+
