--- a/user-ui/src/main/resources/application.properties
+++ b/user-ui/src/main/resources/application.properties
@@ -20,3 +20,6 @@ spring.redis.port=6379
 
 spring.session.store-type=redis
 
+#настройка, чтобы балансировщик нагрузки не перекидывал корзину на другой порт
+server.forward-headers-strategy=framework
+
