ПР5. Применен балансировщик нагрузки zuul и eureka

--- a/zuul-proxy/pom.xml
+++ b/zuul-proxy/pom.xml
@@ -28,7 +28,12 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-zuul</artifactId>
         </dependency>
-
+        <!--		зависимость для работы с eureka (начало)-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+        </dependency>
+        <!--		зависимость для работы с eureka (конец)-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
