--- a/admin-ui/src/main/resources/application.properties
+++ b/admin-ui/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-
+spring.application.name=admin-ui-service
 server.port=8081
 
 spring.datasource.url=jdbc:mysql://192.168.1.73:3306/geek_flower_shop_db1?createDatabaseIfNotExist=true&characterEncoding=UTF-8&serverTimezone=UTC
@@ -15,4 +15,6 @@ spring.liquibase.enabled=false
 
 #настройка, чтобы балансировщик нагрузки не перекидывал корзину на другой порт
 server.forward-headers-strategy=framework
+
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 
