--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,12 @@
     <artifactId>my-shop</artifactId>
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
+
+    <properties>
+        <java.version>1.8</java.version>
+        <spring-cloud.version>Hoxton.RELEASE</spring-cloud.version>
+    </properties>
+
     <modules>
         <module>data</module>
         <module>admin-ui</module>
