--- a/user-ui/src/main/resources/application.properties
+++ b/user-ui/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-
+spring.application.name=shop-ui-service
 
 server.port=8082
 
@@ -22,4 +22,6 @@ spring.session.store-type=redis
 
 #настройка, чтобы балансировщик нагрузки не перекидывал корзину на другой порт
 server.forward-headers-strategy=framework
+
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 
