--- a/zuul-proxy/src/main/resources/application.yaml
+++ b/zuul-proxy/src/main/resources/application.yaml
@@ -1,25 +1,43 @@
+#zuul:
+#  ignoredServices: "*"
+#  routes:
+#    user-ui:
+#      path: /**
+#      sensitiveHeaders:
+#      serviceId: shop-ui-service
+#    admin-ui:
+#      path: /admin/**
+#      sensitiveHeaders:
+#      url: http://localhost:8081
+#
+#shop-ui-service:
+#  ribbon:
+#    listOfServers: http://localhost:8082, http://localhost:8087
+#
+
+spring:
+  application:
+    name: zuul-proxy
+
 zuul:
   ignoredServices: "*"
   routes:
     user-ui:
       path: /**
       sensitiveHeaders:
-      serviceId: shop-ui-service
+      serviceId: SHOP-UI-SERVICE
     admin-ui:
       path: /admin/**
       sensitiveHeaders:
-      url: http://localhost:8081
+      serviceId: ADMIN-UI-SERVICE
 
-shop-ui-service:
-  ribbon:
-    listOfServers: http://localhost:8082, http://localhost:8087
+eureka:
+  client:
+    register-with-eureka: true
 
-#eureka:
-#  instance:
-#    prefer-ip-address: true
-#  client:
-#    serviceUrl:
-#      defaultZone: http://localhost:8761/eureka/
-#    fetchRegistry: true
+    serviceUrl:
+      defaultZone: http://localhost:8761/eureka/
+    fetchRegistry: true
+
 
 
