ПР5. Выделен отдельный сервис picture-service. Используется балансировщик нагрузки zuul и discovery-service eureka

--- a/admin-ui/pom.xml
+++ b/admin-ui/pom.xml
@@ -24,6 +24,11 @@
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
         <dependency>
+            <groupId>ru.geekbrains</groupId>
+            <artifactId>picture-service</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
@@ -45,6 +50,13 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
+
+        <!--		зависимость для работы с eureka (начало)-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+        </dependency>
+        <!--		зависимость для работы с eureka (конец)-->
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
