--- a/picture-service/pom.xml
+++ b/picture-service/pom.xml
@@ -3,16 +3,16 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.2.2.RELEASE</version>
+        <groupId>spring2.ru.geekbrains</groupId>
+        <artifactId>my-shop</artifactId>
+        <version>1.0-SNAPSHOT</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>ru.geekbrains</groupId>
-    <artifactId>zuul-proxy</artifactId>
+    <artifactId>picture-service</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>zuul-proxy</name>
-    <description>zuul proxy for flower-shop</description>
+    <name>picture-service</name>
+    <description>Service for load pictures</description>
 
     <properties>
         <java.version>1.8</java.version>
@@ -25,16 +25,13 @@
             <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-zuul</artifactId>
         </dependency>
-
-        <!--		зависимость для работы с eureka (начало)-->
-        <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
-        </dependency>
-        <!--		зависимость для работы с eureka (конец)-->
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -47,6 +44,19 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        <dependency>
+            <groupId>spring2.ru.geekbrains.data</groupId>
+            <artifactId>data</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+
+        <!--		зависимость для работы с eureka (начало)-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+        </dependency>
+        <!--		зависимость для работы с eureka (конец)-->
+
     </dependencies>
 
     <dependencyManagement>
