--- a/picture-service/src/main/resources/application.properties
+++ b/picture-service/src/main/resources/application.properties
@@ -1,6 +1,5 @@
-spring.application.name=admin-ui-service
-server.port=8081
-
+spring.application.name=picture-app-service
+server.port=8083
 spring.datasource.url=jdbc:mysql://192.168.1.73:3306/geek_flower_shop_db1?createDatabaseIfNotExist=true&characterEncoding=UTF-8&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=123123
@@ -13,7 +12,4 @@ spring.jpa.hibernate.ddl-auto=validate
 spring.liquibase.change-log=classpath:db.changelog/db.changelog-master.xml
 spring.liquibase.enabled=false
 
-#настройка, чтобы балансировщик нагрузки не перекидывал корзину на другой порт
-server.forward-headers-strategy=framework
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
-
