--- a/zuul-proxy/src/main/resources/application.yaml
+++ b/zuul-proxy/src/main/resources/application.yaml
@@ -1,18 +1,25 @@
-zuul:
-  ignoredServices: "*"
-  routes:
-    user-ui:
-      path: /**
-      sensitiveHeaders:
-      serviceId: shop-ui-service
-    admin-ui:
-      path: /admin/**
-      sensitiveHeaders:
-      url: http://localhost:8081
-
-shop-ui-service:
-  ribbon:
-    listOfServers: http://localhost:8082, http://localhost:8087
+#zuul:
+#  ignoredServices: "*"
+#  routes:
+#    user-ui:
+#      path: /**
+#      sensitiveHeaders:
+#      serviceId: shop-ui-service
+#    admin-ui:
+#      path: /admin/**
+#      sensitiveHeaders:
+#      url: http://localhost:8081
+#    picture-service:
+#      path: /pict/**
+#      sensitiveHeaders:
+#      url: picture-app-service
+#
+#shop-ui-service:
+#  ribbon:
+#    listOfServers: http://localhost:8082, http://localhost:8087
+#picture-app-service:
+#  ribbon:
+#    listOfServers: http://localhost:8083, http://localhost:8084
 
 #eureka:
 #  instance:
@@ -22,4 +29,34 @@ shop-ui-service:
 #      defaultZone: http://localhost:8761/eureka/
 #    fetchRegistry: true
 
+spring:
+  application:
+    name: zuul-proxy
 
+zuul:
+  ignoredServices: "*"
+  routes:
+    user-ui:
+#      ribbon:
+#        ReadTimeout=60000:
+#        ListOfServers: http://localhost:8080
+      path: /**
+      sensitiveHeaders:
+      serviceId: USER-UI-SERVICE
+    admin-ui:
+      ribbon:
+        ReadTimeout=60000:
+      path: /admin/**
+      sensitiveHeaders:
+      serviceId: ADMIN-UI-SERVICE
+    picture-service:
+      path: /pict/**
+      sensitiveHeaders:
+      serviceId: picture-app-service
+
+eureka:
+  client:
+    register-with-eureka: true
+    serviceUrl:
+      defaultZone: http://localhost:8761/eureka/
+    fetchRegistry: true
