ПР7. Зависает при создании образа для докера. В Docker Desktop используется Linux контейнер. Лог в корне модуля admin-ui. Последняя строка лога: [INFO] Image will be built as registry.heroku.com/admin-ui/web:latest

--- a/data/src/main/resources/liquibase-maven-plugin.properties
+++ b/data/src/main/resources/liquibase-maven-plugin.properties
@@ -1,5 +1,5 @@
 changeLogFile= db.changelog/db.changelog-master.xml
-url= jdbc:mysql://192.168.1.73:3306/geek_flower_shop_db1?createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true&useSSL=false&useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
+url= jdbc:mysql://localhost:3306/geek_flower_shop_db1?createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true&useSSL=false&useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
 username= root
 password= 123123
 driver= com.mysql.cj.jdbc.Driver
