--- a/picture-service/src/main/resources/application.properties
+++ b/picture-service/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=picture-app-service
 server.port=8083
-spring.datasource.url=jdbc:mysql://192.168.1.73:3306/geek_flower_shop_db1?createDatabaseIfNotExist=true&characterEncoding=UTF-8&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/geek_flower_shop_db1?createDatabaseIfNotExist=true&characterEncoding=UTF-8&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=123123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
