ПР7. Ошибка авторизации liquibase при запуске приложения на heroku

--- a/admin-ui/src/main/resources/application.properties
+++ b/admin-ui/src/main/resources/application.properties
@@ -13,7 +13,7 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=${HIBERNATE_DIALECT:org.hibernate.dialect.MySQL57Dialect}
 spring.jpa.hibernate.ddl-auto=validate
 spring.liquibase.change-log=classpath:db.changelog/db.changelog-master.xml
-spring.liquibase.enabled=false
+spring.liquibase.enabled=true
 
 #настройка, чтобы балансировщик нагрузки не перекидывал корзину на другой порт
 server.forward-headers-strategy=framework
