--- a/admin-ui/pom.xml
+++ b/admin-ui/pom.xml
@@ -83,6 +83,28 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
 
+<!--            <plugin>-->
+<!--                <groupId>com.spotify</groupId>-->
+<!--                <artifactId>dockerfile-maven-plugin</artifactId>-->
+<!--                <version>1.4.13</version>-->
+<!--                <executions>-->
+<!--                    <execution>-->
+<!--                        <id>default</id>-->
+<!--                        <goals>-->
+<!--&lt;!&ndash;                            <goal>build</goal>&ndash;&gt;-->
+<!--                            <goal>push</goal>-->
+<!--                        </goals>-->
+<!--                    </execution>-->
+<!--                </executions>-->
+<!--                <configuration>-->
+<!--                    <repository>registry.heroku.com/farida-${project.artifactId}/web</repository>-->
+<!--                    <tag>latest</tag>-->
+<!--                    <buildArgs>-->
+<!--                        <JAR_FILE>${project.build.finalName}.jar</JAR_FILE>-->
+<!--                    </buildArgs>-->
+<!--                </configuration>-->
+<!--            </plugin>-->
+
             <plugin>
                 <groupId>com.spotify</groupId>
                 <artifactId>dockerfile-maven-plugin</artifactId>
@@ -97,7 +119,10 @@
                     </execution>
                 </executions>
                 <configuration>
-                    <repository>registry.heroku.com/${project.artifactId}/web</repository>
+                    <username>gareevafarida</username>
+                    <password>Purumok11</password>
+                    <googleContainerRegistryEnabled>false</googleContainerRegistryEnabled>
+                    <repository>registry.heroku.com/farida-${project.artifactId}/web</repository>
                     <tag>latest</tag>
                     <buildArgs>
                         <JAR_FILE>${project.build.finalName}.jar</JAR_FILE>
