--- a/user-ui/pom.xml
+++ b/user-ui/pom.xml
@@ -31,15 +31,16 @@
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
         <!--		зависимости для работы с redis (начало)-->
-        <dependency>
-            <groupId>org.springframework.session</groupId>
-            <artifactId>spring-session-data-redis</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>io.lettuce</groupId>
-            <artifactId>lettuce-core</artifactId>
-            <version>5.1.7.RELEASE</version>
-        </dependency>
+<!--        эти зависимости пришлось убрать для работы с docker-->
+<!--        <dependency>-->
+<!--            <groupId>org.springframework.session</groupId>-->
+<!--            <artifactId>spring-session-data-redis</artifactId>-->
+<!--        </dependency>-->
+<!--        <dependency>-->
+<!--            <groupId>io.lettuce</groupId>-->
+<!--            <artifactId>lettuce-core</artifactId>-->
+<!--            <version>5.1.7.RELEASE</version>-->
+<!--        </dependency>-->
         <!--        зависимости для работы с redis (конец)-->
 
         <!--		зависимость для работы с eureka (начало)-->
@@ -77,6 +78,31 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+
+            <plugin>
+                <groupId>com.spotify</groupId>
+                <artifactId>dockerfile-maven-plugin</artifactId>
+                <version>1.4.13</version>
+                <executions>
+                    <execution>
+                        <id>default</id>
+                        <goals>
+                            <goal>build</goal>
+                            <goal>push</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <username>gareevafarida</username><!--логин на docker.com-->
+                    <password>Purumok11</password>
+                    <googleContainerRegistryEnabled>false</googleContainerRegistryEnabled>
+                    <repository>registry.heroku.com/farida-${project.artifactId}/web</repository>
+                    <tag>latest</tag>
+                    <buildArgs>
+                        <JAR_FILE>${project.build.finalName}.jar</JAR_FILE>
+                    </buildArgs>
+                </configuration>
             </plugin>
         </plugins>
     </build>
