ПР8. Добавлены интеграционные тесты для admin-ui по добавлению бренда и категории.        //пыталась протестировать post метод для Product, но ничего не вышло.         //Для этого меняла аннотацию в методе POST, добавляя consumes = {"application/json","text/html"}         //                                                  и producers = {"application/json","text/html"}         //После такого изменения метод POST перестал работать, ошибка 415         //сначала поместила в H2 новый бренд и категорию, потом создала ProductRepr,         // заполнила его категорию и бренд, получила json строку.         //В итоге продукт контроллером так и не создается из-за ошибки либо 415, либо 302.         //Я правильно поняла, что объекты в h2 создаются только через MockMvc? Добавлены unit-тесты для user-ui для корзины и выбора категории по id.

--- a/admin-ui/pom.xml
+++ b/admin-ui/pom.xml
@@ -74,6 +74,11 @@
             <artifactId>spring-security-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
@@ -105,30 +110,30 @@
 <!--                </configuration>-->
 <!--            </plugin>-->
 
-            <plugin>
-                <groupId>com.spotify</groupId>
-                <artifactId>dockerfile-maven-plugin</artifactId>
-                <version>1.4.13</version>
-                <executions>
-                    <execution>
-                        <id>default</id>
-                        <goals>
-                            <goal>build</goal>
-                            <goal>push</goal>
-                        </goals>
-                    </execution>
-                </executions>
-                <configuration>
-                    <username>gareevafarida</username><!--логин на docker.com-->
-                    <password>Purumok11</password>
-                    <googleContainerRegistryEnabled>false</googleContainerRegistryEnabled>
-                    <repository>registry.heroku.com/farida-${project.artifactId}/web</repository>
-                    <tag>latest</tag>
-                    <buildArgs>
-                        <JAR_FILE>${project.build.finalName}.jar</JAR_FILE>
-                    </buildArgs>
-                </configuration>
-            </plugin>
+<!--            <plugin>-->
+<!--                <groupId>com.spotify</groupId>-->
+<!--                <artifactId>dockerfile-maven-plugin</artifactId>-->
+<!--                <version>1.4.13</version>-->
+<!--                <executions>-->
+<!--                    <execution>-->
+<!--                        <id>default</id>-->
+<!--                        <goals>-->
+<!--                            <goal>build</goal>-->
+<!--                            <goal>push</goal>-->
+<!--                        </goals>-->
+<!--                    </execution>-->
+<!--                </executions>-->
+<!--                <configuration>-->
+<!--                    <username>gareevafarida</username>&lt;!&ndash;логин на docker.com&ndash;&gt;-->
+<!--                    <password>Purumok11</password>-->
+<!--                    <googleContainerRegistryEnabled>false</googleContainerRegistryEnabled>-->
+<!--                    <repository>registry.heroku.com/farida-${project.artifactId}/web</repository>-->
+<!--                    <tag>latest</tag>-->
+<!--                    <buildArgs>-->
+<!--                        <JAR_FILE>${project.build.finalName}.jar</JAR_FILE>-->
+<!--                    </buildArgs>-->
+<!--                </configuration>-->
+<!--            </plugin>-->
         </plugins>
     </build>
 
