--- a/admin-ui/src/main/resources/application.properties
+++ b/admin-ui/src/main/resources/application.properties
@@ -1,22 +1,44 @@
-spring.application.name=admin-ui-service
-server.port=${PORT:8081}
+server.port=8081
 
-spring.datasource.url=${JDBC_DATABASE_URL:jdbc:mysql://localhost:3306/geek_flower_shop_db1?createDatabaseIfNotExist=true&characterEncoding=UTF-8&serverTimezone=UTC}
-spring.datasource.username=${JDBC_DATABASE_USERNAME:root}
-spring.datasource.password=${JDBC_DATABASE_PASSWORD:123123}
-spring.datasource.driver-class-name=${JDBC_DRIVER_CLASS:com.mysql.cj.jdbc.Driver}
-# Fix Postgres JPA Error (Method org.postgresql.jdbc.PgConnection.createClob() is not yet implemented).
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.datasource.url=jdbc:mysql://localhost:3306/geek_flower_shop_db1?createDatabaseIfNotExist=true&characterEncoding=UTF-8&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=123123
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.dialect=${HIBERNATE_DIALECT:org.hibernate.dialect.MySQL57Dialect}
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
 spring.jpa.hibernate.ddl-auto=validate
 spring.liquibase.change-log=classpath:db.changelog/db.changelog-master.xml
-spring.liquibase.enabled=true
+
+spring.application.name=admin-ui-service
 
 #настройка, чтобы балансировщик нагрузки не перекидывал корзину на другой порт
 server.forward-headers-strategy=framework
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
-eureka.client.enabled=${EUREKA_ENABLED:true}
+eureka.client.enabled=false
+
+
+#server.port=${PORT:8081}
+#
+#spring.datasource.url=${JDBC_DATABASE_URL:jdbc:mysql://localhost:3306/geek_flower_shop_db1?createDatabaseIfNotExist=true&characterEncoding=UTF-8&serverTimezone=UTC}
+#spring.datasource.username=${JDBC_DATABASE_USERNAME:root}
+#spring.datasource.password=${JDBC_DATABASE_PASSWORD:123123}
+#spring.datasource.driver-class-name=${JDBC_DRIVER_CLASS:com.mysql.cj.jdbc.Driver}
+## Fix Postgres JPA Error (Method org.postgresql.jdbc.PgConnection.createClob() is not yet implemented).
+#spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+#
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.format_sql=true
+#spring.jpa.properties.hibernate.dialect=${HIBERNATE_DIALECT:org.hibernate.dialect.MySQL57Dialect}
+#spring.jpa.hibernate.ddl-auto=validate
+#spring.liquibase.change-log=classpath:db.changelog/db.changelog-master.xml
+#spring.liquibase.enabled=true
+#
+##настройка, чтобы балансировщик нагрузки не перекидывал корзину на другой порт
+#server.forward-headers-strategy=framework
+#eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+#eureka.client.enabled=${EUREKA_ENABLED:true}
+
+
 
