--- a/user-ui/src/main/resources/application.properties
+++ b/user-ui/src/main/resources/application.properties
@@ -25,5 +25,5 @@ spring.session.store-type=redis
 #настройка, чтобы балансировщик нагрузки не перекидывал корзину на другой порт
 server.forward-headers-strategy=framework
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
-eureka.client.enabled=${EUREKA_ENABLED:true}
+eureka.client.enabled=${EUREKA_ENABLED:false}
 
